# Care_link

./: .env  .gitignore  alembic.ini  arborescence.txt  pyproject.toml  pytest.ini   requirements.txt  tests_results.md  tree.md
alembic/: alembic_migration.md  env.py
alembic/versions/: 2025_01_12_add_rls_policies.py  2025_01_13_normalize_permissions.py  2025_12_15_2014_initial_schema.py  2026_01_05_1002_initial_schema_v4_1_with_multitenant.py  alembic_migration.md
app/: main.py
app/api/docs/: RLS.md
app/api/v1/: __init__.py  dependencies.py  router.py
app/core/: __init__.py  config.py  encryption.py  jwt.py  psc.py  redis_client.py  session_manager.py  tenant_context.py  user_auth.py
app/core/auth/: psc.py  user_auth.py
app/core/config/: config.py
app/core/docs/: doc_pro_sante_connect.md
app/core/security/: __init__.py  encryption.py
app/core/session/: session_manager.py  tenant_context.py
app/database/: __init__.py  base_class.py  init_db.py  session.py  session_rls.py
app/models/: __init__.py  base.py  enums.py  mixins.py
app/models/careplan/: __init__.py  care_plan.py  care_plan_service.py
app/models/catalog/: __init__.py  entity_service.py  service_template.py
app/models/coordination/: __init__.py  coordination_entry.py  scheduled_intervention.py
app/models/docs/: carelink_schema_v2.1.dbml  carelink_schema_v4.1.dbml
app/models/organization/: __init__.py  entity.py
app/models/patient/: __init__.py  evaluation_session.py  patient.py  patient_access.py  patient_document.py  patient_evaluation.py  patient_vitals.py
app/models/user/: role.py  (+7 more)
app/services/: __init__.py
backend/: .env  pyproject.toml  requirements-dev.txt  requirements.in
backend/alembic/: env.py
backend/alembic/versions/: 2025_01_22_1200_add_evaluation_sessions.py  2026_01_12_1005_add_multitenant_support.py  2026_06_02_0900-b40j3aaa2026_validation_exchanges.py
backend/app/: main.py
backend/app/api/docs/: API_DOCUMENTATION.md
backend/app/api/v1/: __init__.py  dependencies.py  dependencies_rls.py  health.py  router.py
backend/app/api/v1/auth/: __init__.py  routes.py  schemas.py  services.py
backend/app/api/v1/careplan/: __init__.py  routes.py  routes_services.py  schemas.py  services.py
backend/app/api/v1/catalog/: __init__.py  routes.py  schemas.py  services.py
backend/app/api/v1/coordination/: __init__.py  routes.py  schemas.py  services.py
backend/app/api/v1/organization/: __init__.py  routes.py  schemas.py  services.py
backend/app/api/v1/patient/: __init__.py  routes.py  schemas.py  services.py
backend/app/api/v1/platform/: __init__.py  entity_service.py  routes.py  schemas.py  services.py  super_admin_security.py  tenant_admin_service.py
backend/app/api/v1/tenants/: __init__.py  routes.py  schemas.py  subscription_routes.py  usage_routes.py
backend/app/api/v1/user/: __init__.py  routes.py  schemas.py  services.py  tenant_users_security.py
backend/app/api/v1/validation/: __init__.py  notifications_routes.py  routes.py  schemas.py  services.py
backend/app/core/: __init__.py
backend/app/core/auth/: psc.py  user_auth.py
backend/app/core/config/: __init__.py  config.py
backend/app/core/docs/: doc_dependencies.md  doc_pro_sante_connect.md
backend/app/core/security/: __init__.py  cipher.py  hashing.py  jwt.py
backend/app/core/security/encryption/: __init__.py  blind_index.py  field_types.py  key_manager.py
backend/app/core/session/: redis_client.py  session_manager.py  tenant_context.py
backend/app/database/: __init__.py  base.py  base_class.py  doc_db.md  init_db.py  session.py  session_rls.py
backend/app/models/: __init__.py  base.py  enums.py  mixins.py  types.py
backend/app/models/careplan/: __init__.py  care_plan.py  care_plan_service.py
backend/app/models/catalog/: __init__.py  entity_service.py  service_template.py
backend/app/models/coordination/: __init__.py  coordination_entry.py  scheduled_intervention.py
backend/app/models/family/: __init__.py  family_referent_link.py
backend/app/models/organization/: __init__.py  entity.py
backend/app/models/patient/: __init__.py  evaluation_session.py  patient.py  patient_access.py  patient_document.py  patient_evaluation.py  patient_vitals.py
backend/app/models/platform/: __init__.py  platform_audit_log.py  super_admin.py
backend/app/models/reference/: __init__.py  country.py
backend/app/models/tenants/: __init__.py  subscription.py  subscription_usage.py  tenant.py
backend/app/models/user/: __init__.py  permission.py  profession.py  role.py  role_permission.py  user.py  user_associations.py  user_availability.py  user_tenant_assignment.py
backend/app/models/validation/: __init__.py  notification.py  validation_exchange.py  validation_request.py
backend/app/services/: __init__.py
backend/app/services/aggir/: __init__.py  calculator.py  parser.py  test_aggir.py
backend/app/services/encryption/: __init__.py  base_encryptor.py  evaluation_encryptor.py  patient_encryptor.py  user_encryptor.py
backend/app/services/sante/: test_calculators.py
backend/app/services/schemas/json_schemas/: aggir_only_v1.json  evaluation_v1.json
backend/app/services/validation/: __init__.py  schema_validator.py
backend/docs/backend/: carelink_backend_specifications_v4_6.md
backend/scripts/: generate_keys.py  purge_marie_curie_evaluations.py  rls_validation_exchanges.sql  seed_first_admin.py  verify_rls.sql
backend/tests/: conftest.py  test_rls.py
backend/tests/test_api/: test_careplan.py  test_coordination.py  test_user.py
backend/tests/test_models/: test_catalog.py  test_coordination.py  test_scheduled_intervention.py  test_user.py
docs/: Questions_structuration_UI.md  carelink_backend_specifications_v4_4.md
frontend/: package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts
scripts/: generate_keys.py
tests/: test_rls.py
tests/test_api/: test_catalog.py  test_organization.py  test_patient.py  test_tenants.py
tests/test_models/: test_availability.py  test_base_models.py  test_careplan.py  test_patient.py  test_tenant.py
(+187 files in other folders)
