# =============================================================================
# CareLink Backend - Configuration du projet
# =============================================================================
# Format moderne PEP 621 pour la configuration Python
# =============================================================================

[project]
name = "carelink-backend"
version = "0.1.0"
description = "Plateforme SaaS de coordination des soins pour personnes âgées en perte d'autonomie"
readme = "README.md"
license = { text = "Proprietary" }
requires-python = ">=3.13"
authors = [
    { name = "Olivier de Beyssac", email = "olivier.debeyssac@gmail.com" }
]
keywords = ["healthcare", "elderly-care", "coordination", "SSIAD", "EHPAD", "AGGIR"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Private :: Do Not Upload",
]

# === Dépendances de production ===
dependencies = [
    # Framework Web
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",
    "starlette>=0.41.0,<1.0.0",
    
    # Validation & Configuration
    "pydantic>=2.10.0,<3.0.0",
    "pydantic-settings>=2.6.0,<3.0.0",
    "email-validator>=2.2.0,<3.0.0",
    
    # Base de données
    "sqlalchemy>=2.0.36,<3.0.0",
    "psycopg2-binary>=2.9.10,<3.0.0",
    "alembic>=1.14.0,<2.0.0",
    
    # Authentification & Sécurité
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "cryptography>=44.0.0,<45.0.0",
    "bcrypt>=4.2.0,<5.0.0",
    "passlib>=1.7.4,<2.0.0",
    
    # Sessions & Cache
    "redis>=5.2.0,<6.0.0",
    
    # Client HTTP (pour Pro Santé Connect)
    "httpx>=0.28.0,<1.0.0",
    
    # Utilitaires FastAPI
    "python-multipart>=0.0.19,<1.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    
    # Validation JSON Schema (pour AGGIR)
    "jsonschema>=4.20.0,<5.0.0",
]

# === Dépendances optionnelles ===
[project.optional-dependencies]
dev = [
    # Tests
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "httpx>=0.28.0,<1.0.0",  # TestClient FastAPI
    
    # Linting & Formatting
    "ruff>=0.8.0,<1.0.0",
    "mypy>=1.13.0,<2.0.0",
    
    # Types stubs
    "types-redis>=4.6.0",
    "types-passlib>=1.7.0",
]

docs = [
    "mkdocs>=1.5.0,<2.0.0",
    "mkdocs-material>=9.5.0,<10.0.0",
]

# === Build system ===
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# =============================================================================
# Configuration des outils
# =============================================================================

# === Pytest ===
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring external services (Redis, PostgreSQL)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
asyncio_mode = "auto"

# === Ruff (Linter + Formatter) ===
[tool.ruff]
target-version = "py313"
line-length = 100
exclude = [
    ".git",
    ".venv",
    "env",
    "__pycache__",
    "alembic/versions",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (géré par formatter)
    "B008",   # do not perform function calls in argument defaults (FastAPI Depends)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]
force-single-line = false
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

# === MyPy (Type checking) ===
[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "alembic/",
    "tests/",
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# === Coverage ===
[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "app/dash_app/*",  # À supprimer après nettoyage
    "alembic/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
fail_under = 70
show_missing = true