# =============================================================================
# CareLink Backend - Configuration du projet
# =============================================================================
# Format moderne PEP 621 pour la configuration Python
# =============================================================================

[project]
name = "carelink-backend"
version = "0.1.0"
description = "Plateforme SaaS de coordination des soins pour personnes âgées en perte d'autonomie"
readme = "README.md"
license = { text = "Proprietary" }
requires-python = ">=3.13"
authors = [
    { name = "Olivier de Beyssac", email = "olivier.debeyssac@gmail.com" }
]
keywords = ["healthcare", "elderly-care", "coordination", "SSIAD", "EHPAD", "AGGIR"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Private :: Do Not Upload",
]

# === Dépendances de production ===
dependencies = [
    # Framework Web
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",
    "starlette>=0.41.0,<1.0.0",
    
    # Validation & Configuration
    "pydantic>=2.10.0,<3.0.0",
    "pydantic-settings>=2.6.0,<3.0.0",
    "email-validator>=2.2.0,<3.0.0",
    
    # Base de données
    "sqlalchemy>=2.0.36,<3.0.0",
    "psycopg2-binary>=2.9.10,<3.0.0",
    "alembic>=1.14.0,<2.0.0",
    
    # Authentification & Sécurité
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "cryptography>=44.0.0,<45.0.0",
    "bcrypt>=4.2.0,<5.0.0",
    "passlib>=1.7.4,<2.0.0",
    
    # Sessions & Cache
    "redis>=5.2.0,<6.0.0",
    
    # Client HTTP (pour Pro Santé Connect)
    "httpx>=0.28.0,<1.0.0",
    
    # Utilitaires FastAPI
    "python-multipart>=0.0.19,<1.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    
    # Validation JSON Schema (pour AGGIR)
    "jsonschema>=4.20.0,<5.0.0",
]

# === Dépendances optionnelles ===
[project.optional-dependencies]
dev = [
    # Tests
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "httpx>=0.28.0,<1.0.0",  # TestClient FastAPI
    
    # Linting & Formatting
    "ruff>=0.8.0,<1.0.0",
    "mypy>=1.13.0,<2.0.0",
    
    # Types stubs
    "types-redis>=4.6.0",
    "types-passlib>=1.7.0",
]

docs = [
    "mkdocs>=1.5.0,<2.0.0",
    "mkdocs-material>=9.5.0,<10.0.0",
]

# === Build system ===
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# =============================================================================
# Configuration des outils
# =============================================================================

# === Pytest ===
[tool.pytest.ini_options]
pythonpath = ["backend"]  # Permet à pytest de résoudre "from app.xxx" depuis la racine
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring external services (Redis, PostgreSQL)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
asyncio_mode = "auto"

# === Ruff (Linter + Formatter) ===
# Documentation : https://docs.astral.sh/ruff/configuration/
[tool.ruff]
target-version = "py313"
line-length = 100
src = ["app"]
exclude = [
    ".git",
    ".venv",
    "env",
    "__pycache__",
    "alembic/versions",
]

# ---------- LINTING ----------
[tool.ruff.lint]
select = [
    # --- Essentiels ---
    "E",       # pycodestyle — erreurs de style
    "W",       # pycodestyle — warnings
    "F",       # pyflakes — variables/imports inutilisés, erreurs logiques
    "I",       # isort — tri et groupement des imports
    "UP",      # pyupgrade — modernise le code vers Python 3.13

    # --- Qualité ---
    "B",       # flake8-bugbear — bugs subtils et anti-patterns
    "C4",      # flake8-comprehensions — simplifie list/dict/set comprehensions
    "SIM",     # flake8-simplify — simplifications de code (if/else, with, etc.)
    "RUF",     # ruff-specific — règles propres à Ruff (mutable defaults, etc.)
    "N",       # pep8-naming — conventions de nommage (classes CamelCase, etc.)
    "ASYNC",   # flake8-async — erreurs courantes en code async

    # --- Sécurité (crucial pour CareLink / données de santé) ---
    "S",       # flake8-bandit — détection vulnérabilités (SQL injection, exec, etc.)

    # --- Propreté ---
    "T20",     # flake8-print — interdit print() en code applicatif
    "PIE",     # flake8-pie — code inutile (pass superflu, range(0, x), etc.)
    "RET",     # flake8-return — cohérence des return statements
    "PTH",     # flake8-use-pathlib — préfère pathlib à os.path
]
ignore = [
    "E501",    # Line too long → le formatter gère ça
    "B008",    # Function call in default arg → FastAPI Depends() pattern légitime
    "RET504",  # Unnecessary assignment before return → lisibilité parfois préférable
    "N805",    # First arg of a method != self → Pydantic validators @field_validator
    "UP007",   # Use X | Y for union → garder Optional[X] pour cohérence Pydantic v2

    # --- Faux positifs structurels (Vague 1 — 27/03/2026) ---
    "RUF001",  # Ambiguous Unicode string — emojis FR (ℹ️ ➕) dans init_db.py
    "RUF002",  # Ambiguous Unicode docstring — tirets FR (– × ∪) dans docstrings
    "RUF003",  # Ambiguous Unicode comment — symboles FR (∪) dans commentaires
    "RUF012",  # Mutable class default — FP systématique sur SQLAlchemy relationships
]

# --- Exceptions par dossier ---
[tool.ruff.lint.per-file-ignores]
"tests/**"              = ["S101", "S106", "S105", "T20", "E402", "S608", "PTH", "B017"]
"test_*.py"             = ["S101", "S106", "S105", "T20", "E402", "S608", "PTH"]
"alembic/**"            = ["F401", "I001", "E501"]
"scripts/**"            = ["T20", "S101", "E402", "S311", "PTH", "N806", "B905"]
"app/database/session.py" = ["N801"]
"app/services/validation/schema_validator.py" = ["B019", "PTH123"]
"app/core/session/session_manager.py" = ["S112"]
"app/core/config.py"    = ["S105", "N802"]
"__init__.py"           = ["F401"]
"app/database/base.py"  = ["F401", "T201"]
"app/database/init_db.py" = ["F401", "E402", "T201", "F841"]
"app/api/v1/patient/services.py" = ["E402"]
"app/api/v1/platform/schemas.py" = ["F401"]

# --- Tri des imports ---
[tool.ruff.lint.isort]
known-first-party = ["app"]
force-single-line = false
combine-as-imports = true
lines-after-imports = 2

# --- Règles Bandit / sécurité ---
[tool.ruff.lint.flake8-bandit]
check-typed-exception = true

# ---------- FORMATTING ----------
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
skip-magic-trailing-comma = false

# === MyPy (Type checking) ===
[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "alembic/",
    "tests/",
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# === Coverage ===
[tool.coverage.run]
source = ["backend/app"]
branch = true
omit = [
    "app/dash_app/*",
    "alembic/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
fail_under = 70
show_missing = true